--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,8 @@
+html {
+  min-height: 100%;
+
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -13,7 +18,7 @@ body {
 
 form {
   padding: 20px;
-  margin-left: 20px ;
+
 }
 
 code {
