fg-loadcss has been installed, some Material UI features implemented, design renewed.

--- a/src/index.css
+++ b/src/index.css
@@ -10,7 +10,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background: url("https://buddhify.com/wp-content/uploads/2018/07/iStock-689785084.jpg") repeat;
+  /*background: url("https://buddhify.com/wp-content/uploads/2018/07/iStock-689785084.jpg") repeat;*/
   background-size: 100%;
   background-position: top;
   min-height: 100%;
@@ -18,7 +18,6 @@ body {
 
 form {
   padding: 20px;
-
 }
 
 code {
@@ -26,6 +25,10 @@ code {
     monospace;
 }
 
-.leftmargin {
-  margin-left: 20px ;
+.appbar {
+  background-color: #333333;
+}
+
+.padding {
+  padding: 20px;
 }
