--- a/src/index.css
+++ b/src/index.css
@@ -1,33 +1,41 @@
 html {
-  min-height: 100%;
+    min-height: 100%;
 }
 
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    margin: 0;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  /*background: url("https://buddhify.com/wp-content/uploads/2018/07/iStock-689785084.jpg") repeat;*/
-  background-size: 100%;
-  background-position: top;
-  min-height: 100%;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    /*background: url("https://buddhify.com/wp-content/uploads/2018/07/iStock-689785084.jpg") repeat;*/
+    background-size: 100%;
+    background-position: top;
+    min-height: 100%;
 }
 
 form {
-  padding: 20px;
+    padding: 20px;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+    font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
 
 h1 {
-  text-align: center;
+    text-align: center;
 }
 
 .padding {
-  padding: 20px;
+    padding: 20px;
+}
+
+.center {
+    text-align: center;
+}
+
+.left {
+    text-align: left;
 }
